# solana-auditor-skill

./: CLAUDE.md  LICENSE  README.md  SUBMISSION.md  install.sh
agents/: competition-auditor.md  diff-auditor.md  economic-auditor.md  lead-auditor.md  report-writer.md  vuln-researcher.md
commands/: audit-doctor.md  audit-init.md  audit-onchain.md  audit-report.md  audit-scan.md
examples/: README.md
examples/vulnerable-vault/programs/vulnerable-vault/: Cargo.toml
examples/vulnerable-vault/programs/vulnerable-vault/src/: lib.rs
rules/: audit-discipline.md
skill/: SKILL.md  ai-agent-vulnerabilities.md  audit-lifecycle.md  defi-economic-exploits.md  diff-audit.md  evm-to-solana-mapping.md  formal-verification.md  native-pinocchio-patterns.md  onchain-analysis.md  report-generation.md  report-template.html  resources.md  tools-setup.md  vulnerability-patterns.md
